--- a/style.css
+++ b/style.css
@@ -206,3 +206,58 @@ ul li a:hover {
 .todo-actions .hapus:hover {
     background-color: #b02a37;
 }
+
+form.registrasi {
+    background-color: white; /* warna latar belakang form */
+    color: black; /* warna teks form */
+    max-width: 400px;
+    margin: 50px auto;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+    font-family: sans-serif;
+}
+
+form.registrasi ul {
+    list-style: none; /* menghilangkan bullet point pada list */
+    padding: 0;
+    margin: 0;
+    display: flex; /* menampilkan list dalam satu baris */
+    flex-direction: column; /* mengatur arah elemen list */
+    gap: 15px; /* jarak antar elemen list */
+}
+
+form.registrasi li {
+    display: flex; /* menampilkan list dalam satu baris */
+    flex-direction: column; /* mengatur arah elemen list */
+}
+
+form.registrasi label {
+    margin-bottom: 5px; /* menambah jarak bawah label */
+    font-size: 14px; /* ukuran font label */
+    font-weight: 600; /* mengatur ketebalan font label */
+}
+
+form.registrasi input[type="text"],
+form.registrasi input[type="password"] {
+    padding: 10px; 
+    font-size: 16px; 
+    border-radius: 5px; /* mengatur sudut input */ 
+    width: 100%; /* mengatur lebar input */
+    color:black;
+}
+
+form.registrasi button[name="register"] {
+    padding: 12px;
+    font-size: 16px;
+    background-color: #007bff;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form.registrasi button[name="register"]:hover {
+    background-color: #0056b3;
+}
